**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-16

* There was an unitialized variable bug in the 1.7-14 re-written "cr" basis 
  code for the case k=3. Fixed.

1.7-15

* Several packages had documentation linking to the 'mgcv' function
  help page (now removed), when a link to the package was meant. An alias
  has been added to mgcv-package.Rd to fix/correct these links. 

1.7-14

** predict.bam now added as a wrapper for predict.gam, allowing parallel 
   computation

** bam now has method="fREML" option which uses faster REML optimizer: 
   can make a big difference on parameter rich models.

* bam can now use a cross product and Choleski based method to accumulate
  the required model matrix factorization. Faster, but less stable than 
  the QR based default.

* bam can now obtain starting values using a random sub sample of the data. 
  Useful for seriously large datasets. 

* check of adequacy of basis dimensions added to gam.check

* magic can now deal with model matrices with more columns than rows.

* p-value reference distribution approximations improved.

* bam returns objects of class "bam" inheriting from "gam"

* bam now uses newdata.guaranteed=TRUE option when predicting as part
  of model matrix decomposition accumulation. Speeds things up. 

* More efficient `sweep and drop' centering constraints added as default for
  bam. Constaint null space unchanged, but computation is faster.

* Underlying "cr" basis code re-written for greater efficiency.

* routine mgcv removed, it now being many years since there has been any 
  reason to use it. C source code heavily pruned as a result. 

* coefficient name generation moved from estimate.gam to gam.setup.

* smooth2random.tensor.smooth had a bug that could produce a nonsensical
  penalty null space rank and an error, in some cases (e.g. "cc" basis)
  causing te terms to fail in gamm. Fixed.

* minor change to te constructor. Any unpenalized margin now has 